<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:id="@+id/gr1"
        android:checkableBehavior="single"
        android:menuCategory="container">
        <item
            android:id="@+id/creationNewTripFragment"
            android:title="@string/create_trip" />
        <item
            android:id="@+id/thisTripFragment"
            android:title="@string/current_trip" />
        <item
            android:id="@+id/allTripsFragment"
            android:title="@string/all_trips" />
    </group>

    <group
        android:id="@+id/gr2"
        android:checkableBehavior="single"
        android:menuCategory="container">
        <item
            android:id="@+id/tripsFragment"
            android:title="@string/trips" />
        <item
            android:id="@+id/hotelsFragment"
            android:title="@string/hotels" />
    </group>

    <group
        android:id="@+id/gr3"
        android:checkableBehavior="single"
        android:menuCategory="container">
        <item
            android:id="@+id/aboutFragment"
            android:title="@string/about" />
    </group>

</menu>