<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".model.fragments.CreationNewTripFragment">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="200dp">

                <ImageView
                    android:id="@+id/trip_image"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/unnamed"
                    android:scaleType="centerCrop"
                    android:contentDescription="@string/trip_image"/>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center">

                    <Button
                        android:id="@+id/image_camera_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:elevation="10dp"
                        android:text="@string/camera" />

                    <Button
                        android:id="@+id/image_gallery_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/image_camera_button"
                        android:elevation="10dp"
                        android:text="@string/gallery" />

                </RelativeLayout>

            </FrameLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="12dp">

                <EditText
                    android:id="@+id/trip_name_editText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="9"
                    android:hint="@string/trip_name"/>

                <ImageButton
                    android:id="@+id/trip_name_clear_button"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_baseline_clear_24"
                    android:background="?android:selectableItemBackground"/>
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/destination"
                android:layout_marginTop="10dp"
                android:textSize="16sp"
                android:layout_marginStart="12dp"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingStart="12dp"
                android:paddingEnd="12dp">

                <TextView
                    android:id="@+id/destination_place_txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_alignParentStart="true"
                    android:layout_alignStart="@+id/pick_destination_place_btn"/>

                <Button
                    android:id="@+id/pick_destination_place_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/change"
                    android:layout_alignParentEnd="true"/>
            </RelativeLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/date"
                android:layout_marginTop="10dp"
                android:textSize="16sp"
                android:layout_marginStart="12dp"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingStart="12dp"
                android:paddingEnd="12dp">

                <TextView
                    android:id="@+id/current_date_txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_alignParentStart="true"
                    android:layout_alignStart="@+id/pick_date_btn"/>

                <Button
                    android:id="@+id/pick_date_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/change"
                    android:layout_alignParentEnd="true"/>
            </RelativeLayout>

            <EditText
                android:id="@+id/trip_weight_editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:inputType="numberDecimal"
                android:hint="@string/available_weight" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="12dp"
                android:layout_marginBottom="80dp">

                <EditText
                    android:id="@+id/trip_description_editText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="9"
                    android:hint="@string/description"/>

                <ImageButton
                    android:id="@+id/trip_description_button"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_baseline_clear_24"
                    android:background="?android:selectableItemBackground"/>
            </LinearLayout>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>


    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/accept_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save"
        app:icon="@drawable/ic_baseline_check_24"
        android:layout_gravity="center|bottom"
        android:contentDescription="@string/save_trip_info"
        android:layout_marginBottom="12dp"
        android:backgroundTint="?attr/colorPrimary"/>

    <com.google.android.material.progressindicator.LinearProgressIndicator
        android:id="@+id/progress_line"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center"/>

</androidx.coordinatorlayout.widget.CoordinatorLayout>